Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -28,30 +28,16 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h2>
-<a name="welcome-to-the-guysafternoonin-page" class="anchor" href="#welcome-to-the-guysafternoonin-page"><span class="octicon octicon-link"></span></a>Welcome to the GuysAfternoonIn Page.</h2>
+<a name="welcome-to-the-guys-afternoon-in-page" class="anchor" href="#welcome-to-the-guys-afternoon-in-page"><span class="octicon octicon-link"></span></a>Welcome to the Guys Afternoon In Page</h2>
 
-<p>This just being tested out at the moment as I try to bring in additional functionality for collaboration in the GuysAfternoonIn team.</p>
+<p>This is the home page of the Guys Afternoon In team and will be fleshed out with learned lessons as we progress through our skill building process.  </p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>Get your GitHub accounts created dudes and I'll add you on the team. Eventually we will host our repositories on GitHub when we start to/want to work on the same project together.</p>
 
-<pre><code>&gt; test command line
-</code></pre>
+<h3>
+<a name="guides" class="anchor" href="#guides"><span class="octicon octicon-link"></span></a>Guides</h3>
 
-<pre><code>void method()
-{
-    if (dogsCanLookUp)
-    {
-        mindBlow = true;
-    }
-    else
-    {
-        feelValidated = true;
-    }
-}
-</code></pre>
+<p><a href="https://github.com/GuysAfternoonIn/GuysAfternoonIn.github.io/wiki/Installing-MonoGame-for-Visual-Studio-2013">Installing MonoGame for Visual Studio 2013</a><br><a href="https://github.com/GuysAfternoonIn/GuysAfternoonIn.github.io/wiki/Installing-XNA-for-Visual-Studio-2013">Installing XNA for Visual Studio 2013</a>  </p>
 
 <h3>
 <a name="current-members" class="anchor" href="#current-members"><span class="octicon octicon-link"></span></a>Current Members</h3>
