--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 <h3>
 <a name="current-members" class="anchor" href="#current-members"><span class="octicon octicon-link"></span></a>Current Members</h3>
 
-<p>Jake Wondra (<a href="https://github.com/jwondra" class="user-mention">@jwondra</a>)</p>
+<p>Jake Wondra (<a href="https://github.com/jwondra" class="user-mention">@jwondra</a>)<br>
+Brandon Palsa (<a href="https://github.com/Mondayne" class="user-mention">@Mondayne</a>)</p>
       </section>
     </div>
 
